fix messageBox titlebar visibility after drag&expand

--- a/src/js/dlg/message-box.css
+++ b/src/js/dlg/message-box.css
@@ -46,8 +46,10 @@
   }
 
   &:is(.center, .center-dialog) {
-    align-items: center;
-    justify-content: center;
+    &:not([style*="padding"]) {
+      align-items: center;
+      justify-content: center;
+    }
     > div {
       top: unset;
       right: unset;
